--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -19,34 +18,6 @@ body {
     z-index: 1050; /* Ensure it stays above other content */
 }
 
-/* Navbar */
-header.navbar {
-    position: fixed;
-    top: 50px; /* Adjust the navbar position to leave space for the work-in-progress bar */
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    background-color: #000; /* Dark black background */
-}
-
-.navbar-nav {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center; /* Center the menu items */
-}
-
-.navbar .nav-item {
-    padding: 0 15px;
-}
-
-.navbar .nav-link {
-    color: white !important;
-}
-
-.navbar .nav-link:hover {
-    color: #ff9800 !important;
-}
-
 /* Rotating dumbbell */
 .loading-icon {
     width: 30px;
@@ -65,11 +36,115 @@ header.navbar {
     }
 }
 
+
+/* Navbar */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    top: 50px;
+    padding: 10px 20px;
+    z-index: 1000; 
+    background-color: #000;
+    position: fixed; /* Fix the navbar to the top */
+    width: 100%; /* Make sure the navbar takes the full width */
+    left: 0; /* Ensure the navbar is aligned to the left */
+    right: 0; /* Ensure the navbar is aligned to the right */
+}
+
+.navbar .logo img {
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+    height: 30px;;
+}
+
+.navbar .nav-links {
+    display: flex;
+    align-items: center;
+}
+
+.navbar .nav-links a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+    font-size: 16px;
+}
+
+.navbar .nav-links .dropdown,
+.navbar .nav-links .list-gym {
+    background-color: #333;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.navbar .nav-links .dropdown i,
+.navbar .nav-links .list-gym i {
+    margin-left: 5px;
+}
+
+.navbar .nav-links .signup {
+    background-color: #fff;
+    color: #000;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-weight: bold;
+}
+
+.navbar .hamburger {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: #fff;
+}
+
+@media (max-width: 1010px) {
+    .navbar {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .navbar .nav-links {
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        display: none;
+    }
+
+    .navbar .nav-links a {
+        margin: 5px 0;
+        width: 100%;
+        text-align: left;
+    }
+
+    .navbar .nav-links .dropdown,
+    .navbar .nav-links .list-gym {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .navbar .nav-links .signup {
+        width: 100%;
+        text-align: center;
+    }
+
+    .navbar .hamburger {
+        display: block;
+        position: absolute;
+        right: 20px;
+        top: 10px;
+    }
+}
+
+
+
 .hero-section {
     background: url("../images/bgimg.jpg") no-repeat center center;
     background-size: cover;
     color: white;
-    height: 100vh;
+    height: 75vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
