--- a/static/css/style.css
+++ b/static/css/style.css
@@ -207,27 +207,82 @@ body {
     text-align: center;
 }
 
-.footer a {
-    color: #ddd;
-    padding: 0 10px;
+.footer {
+    background-color: #000;
+    padding: 40px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
 }
-
-.footer .timer {
-    font-size: 1.2rem;
-    font-weight: bold;
-    animation: glow 1.5s infinite alternate;
+.footer .left, .footer .center, .footer .right {
+    flex: 1;
+    min-width: 200px;
+    margin: 10px;
 }
-
-@keyframes glow {
-    0% {
-        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #FFD700;
-        color: #0a1301;
-    }
-
-    100% {
-        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #FFD700;
-        color: #0f0e0f;
-    }
+.footer .left img {
+    width: 100px;
+    margin-bottom: 20px;
+}
+.footer .left p {
+    margin-bottom: 20px;
+}
+.footer .left form {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    padding-right: 5%;
+}
+.footer .left input[type="email"] {
+    padding: 10px;
+    width: 200px;
+    margin-right: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #333;
+    color: #fff;
+}
+.footer .left button {
+    padding: 10px 20px;
+    background-color: #fff;
+    color: #000;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.footer .center, .footer .right {
+    display: flex;
+    flex-direction: column;
+    
+}
+.footer .center h3, .footer .right h3 {
+    margin-bottom: 10px;
+}
+.footer .center a, .footer .right a {
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+.footer .right a {
+    display: flex;
+    align-items: center;
+    padding-left: 40%;
+}
+.footer .right a i {
+    margin-right: 10px;
+    padding-right: 10px;
+}
+.footer .bottom {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+    border-top: 1px solid #333;
+    padding-top: 20px;
+}
+.footer .bottom a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
 }
 
 .email-signup {
