feat : scroll animation

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 20px; 
-    background-color: #dddada;
+    background-color: whitesmoke;
 }
 
 /* Work in Progress Bar */
