--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,7 +103,7 @@ body {
     color: #fff;
 }
 
-@media (max-width: 1010px) {
+@media (max-width: 992px) {
     .navbar {
         flex-direction: row;
         justify-content: space-between;
@@ -113,7 +113,7 @@ body {
         flex-direction: column;
         align-items: flex-start;
         width: 100%;
-        display: none;
+        /* display: none; */
     }
 
     .navbar .nav-links a {
@@ -168,14 +168,19 @@ body {
     padding: 12px 40px;
     border-radius: 50px;
     transition: background-color 0.3s ease;
+    background-color: #000;
 }
 
 .hero-section .btn:hover {
+    transform: scale(1.2);
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    /* ease out */
     background-color: #000;
 }
 
 .section-padding {
     padding: 60px 0;
+    padding-top: 10%;
 }
 
 .feature-list ul {
@@ -388,7 +393,7 @@ body {
 
 
 
-@media (max-width: 767px) {
+@media (max-width: 992px) {
     .hero-section h1 {
         font-size: 2.5rem;
     }
@@ -424,21 +429,14 @@ body {
     .feature-list .col-md-6 {
         margin-bottom: 20px;
     }
-}
-
-@media (max-width: 992px) {
-    .hero-section h1 {
-        font-size: 2.8rem;
-    }
-
-    .hero-section .btn {
-        font-size: 1.3rem;
-    }
-
-    .feature-list .col-md-6 {
-        text-align: center;
+    .footer .right a {
+        display: flex;
+        align-items: center;
+        padding-left: 30%;
     }
 }
+
+
 .neon-sign {
 font-size: 20px;
 font-weight: bold;
